--- a/styles/main.css
+++ b/styles/main.css
@@ -245,18 +245,18 @@ header {
     width: 100%;
     min-block-size: 5rem;
     scroll-snap-align: center;
-}
 
-nav ul {
-    display: flex;
-    align-items: center;
-    transition:
-        opacity 0.2s,
-        font-weight 0.26s;
-    gap: 1cqi;
-    a:hover {
-        font-weight: 850;
-        opacity: 0.5;
+    nav ul {
+        display: flex;
+        align-items: center;
+        transition:
+            opacity 0.2s,
+            font-weight 0.26s;
+        gap: 1cqi;
+        a:hover {
+            font-weight: 850;
+            opacity: 0.5;
+        }
     }
 }
 
@@ -281,40 +281,42 @@ h1 {
     margin-block-end: 0.3rem;
 }
 
-header nav li a {
+.header a {
     filter: drop-shadow(0.5px 0.5px 1px var(--text-shadow));
     position: relative; /* For border positioning */
     padding-bottom: 5px; /* Space for the border */
-}
 
-header nav li a::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 2px;
-    background-color: var(--orange-3);
-    width: 0; /* Initial width */
-    transition: width 0.5s ease-in-out;
-}
 
-header nav li a.animate-border-in::after {
-    width: 100%;
-}
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        height: 2px;
+        background-color: var(--orange-3);
+        width: 0; /* Initial width */
+        transition: width 0.5s ease-in-out;
+    }
+    
+    &.animate-border-in::after {
+        width: 100%;
+    }
 
-header nav li a.animate-border-out::after {
-    width: 0%;
-}
+    &.animate-border-out::after {
+        width: 0%;
+    }
 
 /* Helper class to instantaneously set border to full width */
-header nav li a.force-border-full::after {
-    width: 100%;
-    transition: none; /* No transition when applying this class */
+    &.force-border-full::after {
+        width: 100%;
+        transition: none; /* No transition when applying this class */
+    }
 }
 
 main {
     margin: auto;
 }
+
 .icon-set {
     display: none;
 }
@@ -361,18 +363,15 @@ main {
     padding: 0;
     font: inherit;
     text-decoration: none;
-    &:hover,
-    &:focus,
-    &:active,
-    &:target,
-    &:focus-within {
+
+    &:where(:hover, :focus, :active, :target, :focus-within) {
         opacity: 0.5;
         font-weight: 850;
         outline: 1px solid var(--orange-2);
         border-radius: var(--border-radius);
     }
-    &:active,
-    &:target {
+
+    &:where(:active, :target) {
         color: var(--white-1);
         outline-width: 2px;
     }
@@ -381,12 +380,12 @@ main {
 .company-popover {
     position: absolute;
     background: var(--bkgnd);
-    border: 1px solid var(--orange-1);
+    border: 1px solid color-mix(in oklch, var(--blue-2) 88%, transparent 12%);
     border-radius: var(--border-radius);
     padding: 1rem;
     padding-block-end: 1.25rem;
     inline-size: min(80%, 480px);
-    font-size: 0.9rem;
+    font-size: 0.875rem;
     line-height: 1.4;
     transition:
         opacity var(--link-timing) var(--link-ease),
@@ -404,24 +403,32 @@ main {
         overlay var(--link-timing) allow-discrete;
 
     box-shadow:
-        0 0 1px var(--orange-1),
-        0 0 2px var(--white-1),
-        0 0 3px var(--orange-2);
-}
+    inset 0 0 2px color-mix(in oklch, var(--white-1) 72%, transparent 28%),
+        0 0 4px color-mix(in oklch, var(--blue-2) 48%, transparent 52%),
+        0 0 8px color-mix(in oklch, var(--white-1) 8%, transparent 92%),
+        0 0 16px color-mix(in oklch, var(--blue-2) 16%, transparent 84%);
 
-.company-popover:popover-open {
-    opacity: 1;
-    transform: translateY(0);
+        & .company-description {
+            --recursive-wght: 800;
+            --recursive-CASL: 0;
+            margin-block-end: .5rem;
+        }
+
+        &:popover-open {
+            opacity: 1;
+            transform: translateY(1.25rem); /* popover position on open */
+        }
 }
 
 .work {
     transition: filter var(--link-timing) var(--link-ease);
 }
 
+/* Blur .work background on :popover-open */
 main:has(~ .company-popover:popover-open) .work {
     filter: blur(2px) opacity(0.175) hue-rotate(206deg);
 }
-
+/* Position Anchor support */
 @supports (anchor-name: --a) and (position-anchor: --a) {
     .work {
         anchor-name: --work-anchor;
@@ -435,6 +442,7 @@ main:has(~ .company-popover:popover-open) .work {
     }
 }
 
+/* Position Anchor not supported */
 @supports not ((anchor-name: --a) and (position-anchor: --a)) {
     .work {
         position: relative;
@@ -453,7 +461,7 @@ main:has(~ .company-popover:popover-open) .work {
 @starting-style {
     .company-popover:popover-open {
         opacity: 0;
-        transform: translateY(4rem);
+        transform: translateY(4rem); /* popover position on open */
     }
 }
 
@@ -468,12 +476,6 @@ main:has(~ .company-popover:popover-open) .work {
         opacity: 1;
         transform: translateY(0);
     }
-}
-
-.company-description {
-    font-weight: 600;
-    color: var(--orange-2);
-    margin-bottom: 0.5rem;
 }
 
 .work-summary {
@@ -508,6 +510,7 @@ main:has(~ .company-popover:popover-open) .work {
     flex-wrap: wrap;
     margin-block-start: auto;
     font-size: clamp(1.1cqi, calc(var(--s) + 1.1cqi), var(--m));
+    
     .copyright {
         align-self: center;
     }
@@ -577,6 +580,7 @@ main:has(~ .company-popover:popover-open) .work {
 ) {
     visibility: hidden;
 }
+
 :where(.bio, .skills-container) {
     display: none;
 }
@@ -687,10 +691,7 @@ details {
 @keyframes enter {
     from {
         opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+    } 
 }
 
 @keyframes rotate-gradient {
