--- a/styles/main.css
+++ b/styles/main.css
@@ -226,7 +226,7 @@ body {
         rotate-gradient linear,
         axis-x linear;
     animation-timeline: scroll();
-    animation-range: 0 100vh;
+    animation-range: 0 100dvh;
 
     @media (prefers-reduced-motion: no-preference) {
         interpolate-size: allow-keywords;
@@ -283,34 +283,7 @@ h1 {
 
 .header a {
     filter: drop-shadow(0.5px 0.5px 1px var(--text-shadow));
-    position: relative; /* For border positioning */
-    padding-bottom: 5px; /* Space for the border */
-
-
-    &::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        height: 2px;
-        background-color: var(--orange-3);
-        width: 0; /* Initial width */
-        transition: width 0.5s ease-in-out;
-    }
-    
-    &.animate-border-in::after {
-        width: 100%;
-    }
-
-    &.animate-border-out::after {
-        width: 0%;
-    }
-
-/* Helper class to instantaneously set border to full width */
-    &.force-border-full::after {
-        width: 100%;
-        transition: none; /* No transition when applying this class */
-    }
+    padding-bottom: var(--s);
 }
 
 main {
@@ -350,7 +323,7 @@ main {
 }
 
 .brand {
-    font-weight: 550;
+    --recursive-wght: 600;
     color: var(--gray-2);
     transition:
         color 0.1s,
@@ -365,15 +338,15 @@ main {
     text-decoration: none;
 
     &:where(:hover, :focus, :active, :target, :focus-within) {
+        --recursive-wght: 800;
         opacity: 0.5;
-        font-weight: 850;
         outline: 1px solid var(--orange-2);
         border-radius: var(--border-radius);
     }
 
     &:where(:active, :target) {
         color: var(--white-1);
-        outline-width: 2px;
+        outline-width: var(--xxs);
     }
 }
 
@@ -403,21 +376,25 @@ main {
         overlay var(--link-timing) allow-discrete;
 
     box-shadow:
-    inset 0 0 2px color-mix(in oklch, var(--white-1) 72%, transparent 28%),
+        inset 0 0 2px color-mix(in oklch, var(--white-1) 72%, transparent 28%),
         0 0 4px color-mix(in oklch, var(--blue-2) 48%, transparent 52%),
         0 0 8px color-mix(in oklch, var(--white-1) 8%, transparent 92%),
         0 0 16px color-mix(in oklch, var(--blue-2) 16%, transparent 84%);
 
-        & .company-description {
-            --recursive-wght: 800;
-            --recursive-CASL: 0;
-            margin-block-end: .5rem;
-        }
+    & .company-description {
+        --recursive-wght: 800;
+        --recursive-CASL: 0.25;
+        margin-block-end: var(--s);
+    }
 
-        &:popover-open {
-            opacity: 1;
-            transform: translateY(1.25rem); /* popover position on open */
-        }
+    & .work-summary {
+        color: var(--text-color);
+    }
+
+    &:popover-open {
+        opacity: 1;
+        transform: translateY(1.25rem); /* popover position on open */
+    }
 }
 
 .work {
@@ -478,28 +455,24 @@ main:has(~ .company-popover:popover-open) .work {
     }
 }
 
-.work-summary {
-    color: var(--text-color);
-}
-
 .link-contact {
     font-weight: 550;
     padding: 0;
     cursor: pointer;
     box-shadow:
-        inset 0 -1px 0 0 #4a98bf,
-        inset 0 -2px 0 0 rgba(74, 152, 191, 0.76),
-        inset 0 -6px 0 0 rgba(74, 152, 191, 0.52),
-        inset 0 -10px 0 0 rgba(74, 152, 191, 0.28);
+        inset 0 -1px 0 0 oklch(from #4a98bf l c h),
+        inset 0 -2px 0 0 oklch(from rgba(74, 152, 191, 0.76) l c h),
+        inset 0 -6px 0 0 oklch(from rgba(74, 152, 191, 0.52) l c h),
+        inset 0 -10px 0 0 oklch(from rgba(74, 152, 191, 0.28) l c h);
     transition: box-shadow var(--link-ease) var(--link-timing);
 }
 
 .link-contact:hover {
     box-shadow:
-        inset 0 -2px 0 0 rgba(74, 152, 191, 0.96),
-        inset 0 -4px 0 0 rgba(74, 152, 191, 0.72),
-        inset 0 -8px 0 0 rgba(74, 152, 191, 0.48),
-        inset 0 -12px 0 0 rgba(74, 152, 191, 0.24);
+        inset 0 -2px 0 0 oklch(from rgba(74, 152, 191, 0.96) l c h),
+        inset 0 -4px 0 0 oklch(from rgba(74, 152, 191, 0.72) l c h),
+        inset 0 -8px 0 0 oklch(from rgba(74, 152, 191, 0.48) l c h),
+        inset 0 -12px 0 0 oklch(from rgba(74, 152, 191, 0.24) l c h);
 }
 
 .footer-menu {
@@ -510,7 +483,7 @@ main:has(~ .company-popover:popover-open) .work {
     flex-wrap: wrap;
     margin-block-start: auto;
     font-size: clamp(1.1cqi, calc(var(--s) + 1.1cqi), var(--m));
-    
+
     .copyright {
         align-self: center;
     }
@@ -632,8 +605,8 @@ details {
 
     .job-title {
         transition:
-            opacity 0.32s var(--ease-3),
-            translate 0.32s var(--ease-3);
+            opacity 0.32s var(--link-ease),
+            translate 0.32s var(--link-ease);
     }
 }
 
@@ -641,24 +614,24 @@ details {
     @media (hover) and (prefers-reduced-motion: no-preference) {
         & > details > summary {
             transition:
-                opacity 0.32s var(--ease-3),
-                transform 0.32s var(--ease-3);
+                opacity 0.32s var(--link-ease),
+                transform 0.32s var(--link-ease);
         }
 
         &:has(:hover) > details > summary:not(:hover) {
             opacity: 0.25;
             transform: scale(0.75), translate(0.125rem, 0);
             transition:
-                opacity 0.32s var(--ease-3),
-                transform 0.32s var(--ease-3);
+                opacity 0.32s var(--link-ease),
+                transform 0.32s var(--link-ease);
         }
 
         &:has(:focus) > details > summary:not(:focus) {
             opacity: 0.25;
             transform: scale(0.75), translate(0.125rem, 0);
             transition:
-                opacity 0.32s var(--ease-3),
-                transform 0.32s var(--ease-3);
+                opacity 0.32s var(--link-ease),
+                transform 0.32s var(--link-ease);
         }
     }
 }
@@ -691,7 +664,7 @@ details {
 @keyframes enter {
     from {
         opacity: 0;
-    } 
+    }
 }
 
 @keyframes rotate-gradient {
@@ -735,5 +708,4 @@ details {
     initial-value: 10%;
     inherits: false;
 }
-
 /*# sourceMappingURL=main.css.map */
