.brands -> change grid rules

--- a/styles/main.css
+++ b/styles/main.css
@@ -353,7 +353,7 @@ main {
 .brands {
     @media (width <= 264px) {
             display: inline-grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
     }
 }
 
