--- a/styles/main.css
+++ b/styles/main.css
@@ -353,8 +353,7 @@ main {
 .brands {
     @media (width <= 264px) {
             display: inline-grid;
-            grid-template-columns: repeat(auto-fit, minmax(7rem, 1fr));
-            gap: 4vmin;
+            grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
     }
 }
 
@@ -409,9 +408,9 @@ main {
     transition: filter var(--link-timing) var(--link-ease);
 }
 
-/* Blur verything in main that is not .company-popover on :popover-open */
-main:has(~ .company-popover:popover-open) :not(.company-popover) {
-    filter: blur(2px) opacity(0.375) hue-rotate(206deg);
+/* Blur .work background on :popover-open */
+main:has(~ .company-popover:popover-open) .work {
+    filter: blur(2px) opacity(0.175) hue-rotate(206deg);
 }
 /* Position Anchor support */
 @supports (anchor-name: --a) and (position-anchor: --a) {
@@ -723,5 +722,4 @@ details {
     initial-value: 10%;
     inherits: false;
 }
-
 /*# sourceMappingURL=main.css.map */
