--- a/styles/main.css
+++ b/styles/main.css
@@ -114,7 +114,7 @@ body > * + * {
     --white-2: hsl(0, 0%, 88%);
     --black-1: hsl(360 0% 0%);
     --black-2: hsl(46 94% 119%);
-    --black-3: hsl(200 0% 16%);
+    --black-3: hsl(200 16% 16%);
     --black-4: hsl(0 0% 20%);
     --black-5: hsl(0 0% 47%);
     --gray-1: hsl(200, 8%, 45%);
@@ -128,8 +128,9 @@ body > * + * {
     --orange-3: hsl(13.9 95.2% 67.1%);
     --orange-4: #777;
     --border-radius: var(--s);
-    --color-brand: hsl(200 11% 48%);
-    --text-color: hsl(200 8% 16%);
+    --color-brand: var(--gray-1);
+    --text-dark-color: var(--black-3);
+    --text-light-color: var(--white-1);
     --text-shadow: var(--orange-1);
     --link-color: var(--blue-2);
     --link-ease: cubic-bezier(0.2, 0.8, 0.2, 1);
@@ -144,13 +145,14 @@ body > * + * {
     --recursive-slnt: 0; /* Upright      */
     --recursive-CRSV: 0.5;
     --selection-color: var(--gray-1);
+    color-scheme: light dark;
 
     @supports (color: rgb(from white r g b)) {
         --white-1: oklch(from hsl(200 8%, 88%) l c h);
         --white-2: oklch(from hsl(0, 0%, 88%) l c h);
         --black-1: oklch(from hsl(360 0% 0%) l c h);
         --black-2: oklch(from hsl(46 94% 119%) l c h);
-        --black-3: oklch(from hsl(200 0% 16%) l c h);
+        --black-3: oklch(from hsl(200 16% 16%) l c h);
         --black-4: oklch(from hsl(0 0% 20%) l c h);
         --black-5: oklch(from hsl(0 0% 47%) l c h);
         --gray-1: oklch(from hsl(200, 8%, 45%) l c h);
@@ -163,8 +165,6 @@ body > * + * {
         --orange-2: oklch(from hsl(38.8 100% 50%) l c h);
         --orange-3: oklch(from hsl(13.9 95.2% 67.1%) l c h);
         --orange-4: oklch(from #777 l c h);
-        --color-brand: oklch(from hsl(200 11% 48%) l c h);
-        --text-color: oklch(from hsl(200 8% 16%) l c h);
     }
 }
 
@@ -184,7 +184,7 @@ body > * + * {
 }
 
 :where(:any-link, :-webkit-any-link) {
-    color: var(--black-3);
+    color: light-dark(var(--text-dark-color), var(--text-light-color));
     text-decoration: none;
     padding: 0 var(--xs);
     transition: opacity 0.2s;
@@ -192,7 +192,7 @@ body > * + * {
 
 ::selection {
     background: var(--selection-color);
-    color: var(--white-1);
+    color: light-dark(var(--text-dark-color), var(--text-light-color));
 }
 
 html {
@@ -204,7 +204,6 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    background: var(--bkgnd);
     background: var(--bkgnd)
         conic-gradient(
             from var(--gradient-angle) at -0% 72%,
@@ -212,7 +211,7 @@ body {
             var(--black-4),
             var(--bkgnd)
         );
-    color: var(--text-color);
+    color: light-dark(var(--text-dark-color), var(--text-light-color));
     font-family: var(--font-stack);
     font-optical-sizing: auto;
     -webkit-font-smoothing: antialiased;
@@ -345,7 +344,7 @@ main {
     }
 
     &:where(:active, :target) {
-        color: var(--white-1);
+        color: light-dark(var(--text-dark-color), var(--text-light-color));
         outline-width: var(--xxs);
     }
 }
@@ -384,10 +383,12 @@ main {
         overlay var(--link-timing) allow-discrete;
 
     box-shadow:
-        inset 0 0 2px color-mix(in oklch, var(--white-1) 72%, transparent 28%),
+        inset 0 0 2px color-mix(in oklch, var(--white-1) 44%, transparent 56%),
+        inset 0 0 1px color-mix(in oklch, var(--white-1) 72%, transparent 28%),
         0 0 4px color-mix(in oklch, var(--blue-2) 48%, transparent 52%),
         0 0 8px color-mix(in oklch, var(--white-1) 8%, transparent 92%),
-        0 0 16px color-mix(in oklch, var(--blue-2) 16%, transparent 84%);
+        0 0 16px color-mix(in oklch, var(--blue-2) 16%, transparent 84%),
+        0 0 32px color-mix(in oklch, var(--white-1) 24%, transparent 76%);
 
     & .company-description {
         --recursive-wght: 800;
@@ -396,7 +397,8 @@ main {
     }
 
     & .work-summary {
-        color: var(--text-color);
+        color: light-dark(var(--text-dark-color), var(--text-light-color));
+        margin-block-end: var(--m);
     }
 
     &:popover-open {
@@ -411,7 +413,7 @@ main {
 
 /* Blur verything in main that is not .company-popover on :popover-open */
 main:has(~ .company-popover:popover-open) :not(.company-popover) {
-    filter: blur(2px) opacity(0.375) hue-rotate(206deg);
+    filter: blur(4px) opacity(0.64) hue-rotate(206deg);
 }
 /* Position Anchor support */
 @supports (anchor-name: --a) and (position-anchor: --a) {
@@ -703,12 +705,7 @@ details {
 @media (prefers-color-scheme: dark) {
     body,
     html {
-        --text-color: var(--white-1);
         --text-shadow: var(--white-2);
-        --bkgnd: var(--black-3);
-    }
-    :where(.footer-menu--item a, .link-contact, nav a) {
-        color: var(--white-1);
     }
 }
 
