adjust scroll snap

--- a/styles/main.css
+++ b/styles/main.css
@@ -197,7 +197,7 @@ body > * + * {
 
 html {
     scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
+    scroll-snap-type: y proximity;
     overflow-y: scroll;
 }
 
@@ -749,5 +749,4 @@ details {
     initial-value: 10%;
     inherits: false;
 }
-
 /*# sourceMappingURL=main.css.map */
