--- a/styles/main.css
+++ b/styles/main.css
@@ -94,7 +94,7 @@ textarea:not([rows]) {
     outline: 0;
 }
 
-body > * + * {
+body>*+* {
     -webkit-margin-before: var(--flow-space, 1em);
     margin-block-start: var(--flow-space, 1em);
 }
@@ -127,6 +127,7 @@ body > * + * {
     --orange-2: hsl(38.8 100% 50%);
     --orange-3: hsl(13.9 95.2% 67.1%);
     --orange-4: #777;
+    --bkgnd: var(--black-3);
     --border-radius: var(--s);
     --color-brand: var(--gray-1);
     --text-dark-color: var(--black-3);
@@ -141,8 +142,10 @@ body > * + * {
         sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --recursive-wght: 400;
     --recursive-CASL: 0;
-    --recursive-MONO: 0; /* Monospace    */
-    --recursive-slnt: 0; /* Upright      */
+    --recursive-MONO: 0;
+    /* Monospace    */
+    --recursive-slnt: 0;
+    /* Upright      */
     --recursive-CRSV: 0.5;
     --selection-color: var(--gray-1);
     color-scheme: light dark;
@@ -204,13 +207,7 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    background: var(--bkgnd)
-        conic-gradient(
-            from var(--gradient-angle) at -0% 72%,
-            var(--bkgnd),
-            var(--black-4),
-            var(--bkgnd)
-        );
+    background: var(--bkgnd);
     color: light-dark(var(--text-dark-color), var(--text-light-color));
     font-family: var(--font-stack);
     font-optical-sizing: auto;
@@ -251,6 +248,7 @@ header {
             opacity 0.2s,
             font-weight 0.26s;
         gap: 1cqi;
+
         a:hover {
             font-weight: 850;
             opacity: 0.5;
@@ -267,6 +265,7 @@ h1 {
     text-transform: uppercase;
     transition: font-variation-settings 0.48s;
     filter: drop-shadow(0.5px 0.5px 1px var(--text-shadow));
+
     &:hover {
         --recursive-wght: 900;
         --recursive-CASL: 0.1;
@@ -313,11 +312,9 @@ main {
 
 /* header - drop shadow */
 :where(h1, .nav-item, .copyright) {
-    filter: drop-shadow(
-        0.5px 0.5px 1px var(--text-shadow),
-        0.75px 0.75px 3px var(--text-shadow),
-        1.25px 1.25px 6px var(--text-shadow)
-    );
+    filter: drop-shadow(0.5px 0.5px 1px var(--text-shadow),
+            0.75px 0.75px 3px var(--text-shadow),
+            1.25px 1.25px 6px var(--text-shadow));
 }
 
 .brand {
@@ -350,10 +347,10 @@ main {
 }
 
 .brands {
-    @media (width <= 264px) {
-            display: inline-grid;
-            grid-template-columns: repeat(auto-fit, minmax(7rem, 1fr));
-            gap: 4vmin;
+    @media (width <=264px) {
+        display: inline-grid;
+        grid-template-columns: repeat(auto-fit, minmax(7rem, 1fr));
+        gap: 4vmin;
     }
 }
 
@@ -399,6 +396,7 @@ main {
     & .work-summary {
         color: light-dark(var(--text-dark-color), var(--text-light-color));
         margin-block-end: var(--m);
+        font-size: calc(var(--xs) + var(--s));
     }
 
     & .roles {
@@ -408,16 +406,17 @@ main {
     }
 
     & .role {
-        background: var(--gray-1);
-        color: var(--black-1);
-        padding: var(--xs) var(--s);
+        border: 1px solid;
+        padding: var(--xxs) var(--xs);
         border-radius: var(--border-radius);
-        font-size: 0.75rem;
+        font-size: calc(var(--xs) + var(--s));
+        ;
     }
 
     &:popover-open {
         opacity: 1;
-        transform: translateY(1.25rem); /* popover position on open */
+        transform: translateY(1.25rem);
+        /* popover position on open */
     }
 }
 
@@ -429,6 +428,7 @@ main {
 main:has(~ .company-popover:popover-open) :not(.company-popover) {
     filter: blur(4px) opacity(0.64) hue-rotate(206deg);
 }
+
 /* Position Anchor support */
 @supports (anchor-name: --a) and (position-anchor: --a) {
     .work {
@@ -453,6 +453,7 @@ main:has(~ .company-popover:popover-open) :not(.company-popover) {
         inset-block-start: 116dvh;
         inset-inline-start: 8%;
         inset-inline-end: 8%;
+
         @media (orientation: landscape) and (max-height: 420px) {
             inset-block-start: 128dvh;
         }
@@ -462,7 +463,8 @@ main:has(~ .company-popover:popover-open) :not(.company-popover) {
 @starting-style {
     .company-popover:popover-open {
         opacity: 0;
-        transform: translateY(4rem); /* popover position on open */
+        transform: translateY(4rem);
+        /* popover position on open */
     }
 }
 
@@ -508,22 +510,24 @@ main:has(~ .company-popover:popover-open) :not(.company-popover) {
     margin-block-start: auto;
     font-size: clamp(1.1cqi, calc(var(--s) + 1.1cqi), var(--m));
 
-        ul {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1.25vmin;
-            @media (width < 264px) {
-                display: grid;
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1.25vmin;
 
-        .copyright {
-            align-self: center;
-            @media (224px <= width < 264px) {
-                margin-block-start: calc(9dvh - 1rem);
-            } 
+        @media (width < 264px) {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
         }
+    }
+
+    .copyright {
+        align-self: center;
+
+        @media (224px <=width < 264px) {
+            margin-block-start: calc(9dvh - 1rem);
+        }
+    }
 }
 
 .footer-menu--item a {
@@ -533,6 +537,7 @@ main:has(~ .company-popover:popover-open) :not(.company-popover) {
     gap: 1ch;
     filter: drop-shadow(0.5px 0.5px 1px var(--text-shadow));
     transition: fill 330ms;
+
     @supports (color: color(display-p3 1 1 1)) and (prefers-color-scheme: dark) {
         .footer-menu--item a {
             --text-shadow: color(display-p3 0.873 0.883 0.889);
@@ -563,9 +568,11 @@ main:has(~ .company-popover:popover-open) :not(.company-popover) {
 .icon-text {
     margin-block-end: 0.1rem;
 }
+
 #about {
     max-width: max(48ch, 64ch);
 }
+
 #icon-twitter {
     margin-block-end: 0.3rem;
 }
@@ -574,14 +581,12 @@ main:has(~ .company-popover:popover-open) :not(.company-popover) {
     inline-size: clamp(32vmin, 36rem, 64vmin);
 }
 
-:where(
-    #technical-skills-heading,
+:where(#technical-skills-heading,
     #work-experience-heading,
     #education-heading,
     #certifications-heading,
     [aria-label="technical-skills"],
-    date
-) {
+    date) {
     visibility: hidden;
 }
 
@@ -589,12 +594,10 @@ main:has(~ .company-popover:popover-open) :not(.company-popover) {
     display: none;
 }
 
-:where(
-    [aria-label="technical-skills"],
+:where([aria-label="technical-skills"],
     [aria-label="work-experience"],
     [aria-label="education"],
-    [aria-label="certifications"]
-) {
+    [aria-label="certifications"]) {
     margin-block-end: 2.5rem;
 }
 
@@ -611,15 +614,17 @@ details {
     * {
         margin: 0;
     }
+
     ul {
         padding-inline-start: var(--m);
         padding-block-start: var(--m);
     }
+
     li {
         padding-block: var(--s);
     }
 
-    > summary {
+    >summary {
         display: flex;
         justify-content: space-between;
         align-items: baseline;
@@ -630,7 +635,7 @@ details {
         transition: text-shadow 0.32s ease-in-out;
     }
 
-    &[open] > summary:focus {
+    &[open]>summary:focus {
         text-shadow: 2px 2px 5px var(--text-shadow);
     }
 
@@ -643,13 +648,13 @@ details {
 
 .resume-container section {
     @media (hover) and (prefers-reduced-motion: no-preference) {
-        & > details > summary {
+        &>details>summary {
             transition:
                 opacity 0.32s var(--link-ease),
                 transform 0.32s var(--link-ease);
         }
 
-        &:has(:hover) > details > summary:not(:hover) {
+        &:has(:hover)>details>summary:not(:hover) {
             opacity: 0.25;
             transform: scale(0.75), translate(0.125rem, 0);
             transition:
@@ -657,7 +662,7 @@ details {
                 transform 0.32s var(--link-ease);
         }
 
-        &:has(:focus) > details > summary:not(:focus) {
+        &:has(:focus)>details>summary:not(:focus) {
             opacity: 0.25;
             transform: scale(0.75), translate(0.125rem, 0);
             transition:
@@ -717,6 +722,7 @@ details {
 }
 
 @media (prefers-color-scheme: dark) {
+
     body,
     html {
         --text-shadow: var(--white-2);
